<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@color/background"
	android:orientation="horizontal"
	android:padding="15dip"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout
		android:layout_gravity="center"
		android:paddingLeft="20dip"
		android:paddingRight="20dip"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:layout_gravity="center"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="development 1.0.3"
			android:layout_marginBottom="2dip"
			android:textSize="24.5sp" />
		<TextView
			android:layout_gravity="center"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/main_title"
			android:layout_marginBottom="20dip"
			android:textSize="24.5sp" />
		<TableLayout
			android:layout_gravity="center"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:stretchColumns="*">
			<TableRow>
				<Button
					android:id="@+id/continue_button"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/continue_label" />
				<Button
					android:id="@+id/new_button"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/new_game_label" />
			</TableRow>
			<TableRow>
				<Button
					android:id="@+id/about_button"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/about_label" />
				<Button
					android:id="@+id/exit_button"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/exit_label" />
			</TableRow>
		</TableLayout>
	</LinearLayout>
</LinearLayout>
